force-app/main/default/objects/APTask__c/APTask__c.object-meta.xml
<CustomObject>
    <description>Action Plan Task - belongs to Action Plan</description>
    <label>Action Plan Task</label>
    <nameField>
        <label>Action Plan Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>