force-app/main/default/objects/APTask__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The controlling task</description>
    <label>Controlling Task</label>
    <referenceTo>APTask__c</referenceTo>
    <relationshipName>Dependent_AP_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>