force-app/main/default/objects/APTask__c/fields/Task_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Task_RecordTypeId__c</fullName>
    <description>Formula for setting the Record Type of the created Task</description>
    <formula>Action_Plan__r.TaskRecordTypeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasks Record Type Id</label>
    <type>Text</type>
</CustomField>