force-app/main/default/objects/APTask__c/fields/TaskIndex__c.field-meta.xml
<CustomField>
    <fullName>TaskIndex__c</fullName>
    <description>The order in which to display the AP Tasks on a page</description>
    <label>Task Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>