force-app/main/default/objects/APTask__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User who will be assigned the created Task.</description>
    <inlineHelpText>If this field is not required (and the custom setting is set to assign to the related record owner), leaving it blank will assign the task to the related record owner.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APTasks</relationshipName>
    <type>Lookup</type>
</CustomField>